--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,36 @@
-# Agentic Honey-Pot Configuration
-# Copy this file to .env and update with your values
+# ═══════════════════════════════════════
+# Agentic Honeypot — Environment Config
+# ═══════════════════════════════════════
+# Copy this to .env and fill in your values
 
-# API Key for authentication (REQUIRED - set your own secret key)
-API_KEY=your-secret-api-key-here
+# --- API Keys ---
+GROQ_API_KEY=your_groq_api_key_here
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+TWILIO_ACCOUNT_SID=your_twilio_sid_here
+TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+TWILIO_PHONE_NUMBER=+1234567890
 
-# Server Configuration
-PORT=3000
+# --- Server ---
+HOST=0.0.0.0
+PORT=8000
+DEBUG=false
+API_KEY=fae26946fc2015d9bd6f1ddbb447e2f7
 
-# Logging Level (debug, info, warn, error)
-LOG_LEVEL=info
+# --- LLM ---
+LLM_MODEL=llama-3.3-70b-versatile
+LLM_TEMPERATURE=0.8
+LLM_MAX_TOKENS=512
 
-# GUVI Callback URL (do not change unless instructed)
-GUVI_CALLBACK_URL=https://hackathon.guvi.in/api/updateHoneyPotFinalResult
+# --- Voice ---
+STT_MODEL=whisper-large-v3
+ELEVENLABS_VOICE_ID=your_voice_id_here
+ELEVENLABS_MODEL=eleven_multilingual_v2
+
+# --- Database ---
+DB_PATH=honeypot.db
+
+# --- Persona ---
+PERSONA_NAME=Priya Sharma
+PERSONA_AGE=28
+PERSONA_LOCATION=Mumbai, Andheri West
+PERSONA_OCCUPATION=Software Engineer at TCS
