--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/index.js",
-      "use": "@vercel/node"
+      "src": "api/index.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.js"
+      "dest": "api/index.py"
     }
-  ],
-  "env": {
-    "PORT": "3000"
-  }
+  ]
 }
