feat: add admin dashboard for session management with stats, session details, and settings

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,34 @@
-# ═══════════════════════════════════════
-# Agentic Honeypot — Environment Config
-# ═══════════════════════════════════════
-# Copy this to .env and fill in your values
+# ═══════════════════════════════════════════════════════════
+# Agentic Honeypot — Environment Configuration Template
+# Copy this file to .env and fill in your actual values
+# ═══════════════════════════════════════════════════════════
 
-# --- API Keys ---
+# --- GROQ API (REQUIRED) ---
 GROQ_API_KEY=your_groq_api_key_here
+
+# --- ElevenLabs TTS (REQUIRED for voice features) ---
 ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
-TWILIO_ACCOUNT_SID=your_twilio_sid_here
-TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
-TWILIO_PHONE_NUMBER=+1234567890
 
 # --- Server ---
 HOST=0.0.0.0
-PORT=8000
+PORT=8001
 DEBUG=false
-API_KEY=fae26946fc2015d9bd6f1ddbb447e2f7
+API_KEY=your_api_key_here
 
 # --- LLM ---
 LLM_MODEL=llama-3.3-70b-versatile
 LLM_TEMPERATURE=0.8
 LLM_MAX_TOKENS=512
 
-# --- Voice ---
-STT_MODEL=whisper-large-v3
-ELEVENLABS_VOICE_ID=your_voice_id_here
-ELEVENLABS_MODEL=eleven_multilingual_v2
+# --- PostgreSQL Database (REQUIRED) ---
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=honeypot
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_password_here
 
-# --- Database ---
-DB_PATH=honeypot.db
-
-# --- Persona ---
+# --- Persona Defaults (Optional — can be set via Admin Dashboard) ---
 PERSONA_NAME=Priya Sharma
 PERSONA_AGE=28
+PERSONA_OCCUPATION=Software Engineer
 PERSONA_LOCATION=Mumbai, Andheri West
-PERSONA_OCCUPATION=Software Engineer at TCS
