--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,11 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# ═══════════════════════════════════════════
+# Agentic Honeypot — .gitignore
+# ═══════════════════════════════════════════
 
-# Environment variables
+# Environment & secrets
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Logs
-logs
-*.log
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# VS Code
-.vscode/
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# IDE files
-*.swp
-*.swo
-*~
-
-# Build outputs
-build/
-dist/
-out/
-
-# Runtime files
-*.lock
-package-lock.json
-
-# Temporary files
-tmp/
-temp/
+.env.*.local
 
 # Python
 __pycache__/
@@ -84,11 +15,32 @@ __pycache__/
 .venv/
 venv/
 
+# OS generated
+.DS_Store
+Thumbs.db
+ehthumbs.db
+
+# IDE
+.vscode/
+*.swp
+*.swo
+*~
+
+# Build
+build/
+dist/
+out/
+
+# Node (if any)
+node_modules/
+
 # Project runtime
 honeypot.db
 temp_audio/
 reports/*.pdf
-test_report.pdf
+test_report.*
 .vercel/
 
-test_report.json
+# Logs
+*.log
+logs/
