--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,8 @@ python-multipart>=0.0.6
 # --- LLM ---
 groq>=0.4.0
 
+# --- Database ---
+asyncpg>=0.29.0
+
 # --- Environment ---
 python-dotenv>=1.0.0
