fix: update LLM model to openai/gpt-oss-120b in environment configuration

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ DEBUG=false
 API_KEY=your_api_key_here
 
 # --- LLM ---
-LLM_MODEL=llama-3.3-70b-versatile
+LLM_MODEL=openai/gpt-oss-120b
 LLM_TEMPERATURE=0.8
 LLM_MAX_TOKENS=512
 
