--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,11 @@ DEBUG=false
 API_KEY=your_api_key_here
 
 # --- LLM ---
-LLM_MODEL=openai/gpt-oss-120b
+LLM_MODEL=llama-3.1-8b-instant
+LLM_FALLBACK_MODEL=llama-3.3-70b-versatile
 LLM_TEMPERATURE=0.8
 LLM_MAX_TOKENS=512
+LLM_TIMEOUT=12
 
 # --- PostgreSQL Database (REQUIRED) ---
 POSTGRES_HOST=localhost
