--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@
 
 # --- GROQ API (REQUIRED) ---
 GROQ_API_KEY=your_groq_api_key_here
+# Optional: second Groq API key for fallback if primary hits rate limits
+RECOVERY_KEY=your_backup_groq_key_here
 
 # --- ElevenLabs TTS (REQUIRED for voice features) ---
 ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
