Enhance Agentic Honeypot v3.0: Update documentation, improve API responses, and refine intelligence extraction logic. Added health check endpoint, enhanced fallback mechanisms, and improved scam classification accuracy. Updated session management for better state handling and added detailed agent notes for analysis.

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ GROQ_API_KEY=your_groq_api_key_here
 # Optional: second Groq API key for fallback if primary hits rate limits
 RECOVERY_KEY=your_backup_groq_key_here
 
-# --- ElevenLabs TTS (REQUIRED for voice features) ---
+# --- ElevenLabs TTS (Optional — for voice features) ---
 ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 
 # --- Server ---
@@ -24,7 +24,7 @@ LLM_TEMPERATURE=0.8
 LLM_MAX_TOKENS=512
 LLM_TIMEOUT=12
 
-# --- PostgreSQL Database (REQUIRED) ---
+# --- PostgreSQL Database (Optional — for session persistence) ---
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=honeypot
