docs: sync README, ARCHITECTURE, .env.example with actual 8b-only config, 7-level fallback chain, 38 fallback responses

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ API_KEY=your_api_key_here
 
 # --- LLM ---
 LLM_MODEL=llama-3.1-8b-instant
-LLM_FALLBACK_MODEL=llama-3.3-70b-versatile
+LLM_FALLBACK_MODEL=llama-3.1-8b-instant
 LLM_TEMPERATURE=0.8
 LLM_MAX_TOKENS=512
 LLM_TIMEOUT=12
